<resources>
    <string name="app_name">CathyDa_COMP304Lab3_Exercise1</string>

    <string name="submit_button">Submit</string>
    <string name="add_button">Add</string>


    <string name="first_name_text">First Name:</string>
    <string name="last_name_text">Last Name:</string>
    <string name="department_text">Department:</string>

    <string name="userId_text">User ID:</string>
    <string name="password_text">Password: </string>

    <!--Menu-->
    <string name="view_patient_text">View Patients</string>
    <string name="new_patient_text">Add Patient</string>

    <!--New Nurse-->
    <string name="create_button">Create Account</string>
    <string name="nurse_id_text">Nurse ID:</string>

    <!--Login Page-->
    <string name="login_text">Login</string>
    <string name="no_account_text">No account?</string>

    <!--Patient-->
    <string name="patient_room_text">Room:</string>
    <string name="view_patient_button">View Patient</string>
    <string name="new_patient_button">Add Patient</string>

    <string name="view_tests_button">View Tests</string>
    <string name="update_patient_button">Update</string>
    <string name="new_test_button">New Test</string>

    <!--Test-->
    <string name="patient_name_text">Patient:</string>
    <string name="nurse_name_text">Nurse:</string>
    <string name="BPL_text">BPL:</string>
    <string name="BPL_units_text">mm Hg</string>
    <string name="BPH_text">BPH:</string>
    <string name="temperature_text">Temperature:</string>
    <string name="temperature_units_text">C</string>
    <string name="weight_text">Weight:</string>
    <string name="weight_units_text">lbs</string>
    <string name="blood_glucose_text">Blood Glucose:</string>
    <string name="blood_glucose_units_text">mmol/L</string>
    <string name="BPM_text">BPM:</string>
    <string name="BPM_unit_text">BPM</string>
    <string name="oxygen_saturation_level_text">Oxygen Saturation:</string>
    <string name="oxygen_saturation_level_unit_text">%</string>

    <string name="new_test_header">New Test</string>

</resources>