<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/rowPatientName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtTestPatientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_name_text" />

                <TextView
                    android:id="@+id/txtTestPatientNameInfo"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/rowNurseName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtTestNurseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nurse_name_text" />

                <TextView
                    android:id="@+id/txtTestNurseNameInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/rowBPL"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtBPL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BPL_text" />

                <TextView
                    android:id="@+id/txtBPLInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtBPLUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BPL_units_text" />
            </TableRow>

            <TableRow
                android:id="@+id/rowBPH"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtBPH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BPH_text" />

                <TextView
                    android:id="@+id/txtBPHInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/rowTemperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_text" />

                <TextView
                    android:id="@+id/txtTemperatureInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtTemperatureUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_units_text" />
            </TableRow>

            <TableRow
                android:id="@+id/rowWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_text" />

                <TextView
                    android:id="@+id/txtWeightInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtWeightUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_units_text" />
            </TableRow>

            <TableRow
                android:id="@+id/rowBloodGlucose"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtBloodGlucose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_glucose_text" />

                <TextView
                    android:id="@+id/txtBloodGlucoseInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtBloodGlucoseUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_glucose_units_text" />
            </TableRow>

            <TableRow
                android:id="@+id/rowBPM"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtBPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BPM_text" />

                <TextView
                    android:id="@+id/txtBPMInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtBPMUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BPM_unit_text" />
            </TableRow>

            <TableRow
                android:id="@+id/rowOxygenSaturationLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtOxygenSaturationLevel"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oxygen_saturation_level_text" />

                <TextView
                    android:id="@+id/txtOxygenSaturationLevelInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtOxygenSaturationLevelUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oxygen_saturation_level_unit_text" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>