<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="390dp"
        android:layout_height="298dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/rowPatientFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUpdatePatientFirstName"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name_text" />

            <EditText
                android:id="@+id/txtInputUpdatePatientFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowPatientLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUpdatePatientLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_text" />

            <EditText
                android:id="@+id/txtInputUpdatePatientLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowNurseName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUpdateNurseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nurse_name_text" />

            <EditText
                android:id="@+id/txtInputUpdateNurseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUpdateRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_room_text" />

            <EditText
                android:id="@+id/txtInputUpdateRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowDepartment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUpdateDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department_text" />

            <EditText
                android:id="@+id/txtInputUpdateDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnNewTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="24dp"
        android:text="@string/new_test_button"
        app:layout_constraintBottom_toTopOf="@+id/btnViewTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/update_patient_button"
        app:layout_constraintBottom_toTopOf="@+id/btnNewTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/btnViewTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_tests_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewTest" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/submit_button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnNewTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>