<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="387dp"
        android:layout_height="238dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TableRow
            android:id="@+id/rowNewPatientFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNewPatientFirstName"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name_text" />

            <EditText
                android:id="@+id/txtInputNewPatientFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowNewPatientLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNewPatientLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_text" />

            <EditText
                android:id="@+id/txtInputNewPatientLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowNewRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNewRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_room_text" />

            <EditText
                android:id="@+id/txtInputNewRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/rowNewDepartment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNewDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department_text" />

            <EditText
                android:id="@+id/txtInputNewDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>